--- a/.github/workflows/qodana.yml
+++ b/.github/workflows/qodana.yml
@@ -17,3 +17,5 @@ jobs:
         uses: JetBrains/qodana-action@v2022.3.2
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+        with:
+          pr-mode: false
